force-app/main/default/objects/CIF_Input_Address__c/CIF_Input_Address__c.object-meta.xml
<CustomObject>
    <description>updated</description>
    <label>CIF Input Address</label>
    <nameField>
        <label>CIF Input Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CIF Input Address</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>