force-app/main/default/objects/CIF_Input_Address__c/fields/address_detail__c.field-meta.xml
<CustomField>
    <fullName>address_detail__c</fullName>
    <label>address_detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>