force-app/main/default/objects/CIF_Input_Address__c/fields/lng__c.field-meta.xml
<CustomField>
    <fullName>lng__c</fullName>
    <label>lng</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>