force-app/main/default/objects/CIF_Input_Address__c/fields/province__c.field-meta.xml
<CustomField>
    <fullName>province__c</fullName>
    <label>province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>