force-app/main/default/objects/CIF_Input_Address__c/fields/rt__c.field-meta.xml
<CustomField>
    <fullName>rt__c</fullName>
    <label>rt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>