force-app/main/default/objects/CIF_Input_Address__c/fields/subdistrict__c.field-meta.xml
<CustomField>
    <fullName>subdistrict__c</fullName>
    <label>subdistrict</label>
    <length>255</length>
    <type>Text</type>
</CustomField>