force-app/main/default/objects/CIF_Input_Address__c/fields/subdistrict_id__c.field-meta.xml
<CustomField>
    <fullName>subdistrict_id__c</fullName>
    <label>subdistrict_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>