force-app/main/default/objects/CIF_Input_Address__c/fields/zip_code__c.field-meta.xml
<CustomField>
    <fullName>zip_code__c</fullName>
    <label>zip_code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>